--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = ["setuptools>=68.0"]
-build-backend = "setuptools.backends._legacy:_Backend"
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "tarot-gen"
@@ -13,6 +13,7 @@ dependencies = [
     "requests>=2.28.0",
     "rich>=13.0.0",
     "Pillow>=10.0.0",
+    "PyYAML>=6.0",
 ]
 
 [project.scripts]
